packages/qasm-transform/src/generated/OpenQASM3Parser.ts
/* eslint-disable */
// @ts-nocheck
// Generated by ANTLR from backend/src/main/antlr — do not edit.
// Generated from ../../backend/src/main/antlr/OpenQASM3Parser.g4 by ANTLR 4.13.1

import * as antlr from 'antlr4ng';
import { Token } from 'antlr4ng';

import { OpenQASM3ParserVisitor } from './OpenQASM3ParserVisitor.js';

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export class OpenQASM3Parser extends antlr.Parser {
    public static readonly OPENQASM = 1;
    public static readonly INCLUDE = 2;
    public static readonly DEFCALGRAMMAR = 3;
    public static readonly DEF = 4;
    public static readonly CAL = 5;
    public static readonly DEFCAL = 6;
    public static readonly GATE = 7;
    public static readonly EXTERN = 8;
    public static readonly BOX = 9;
    public static readonly LET = 10;
    public static readonly BREAK = 11;
    public static readonly CONTINUE = 12;
    public static readonly IF = 13;
    public static readonly ELSE = 14;
    public static readonly END = 15;
    public static readonly RETURN = 16;
    public static readonly FOR = 17;
    public static readonly WHILE = 18;
    public static readonly IN = 19;
    public static readonly SWITCH = 20;
    public static readonly CASE = 21;
    public static readonly DEFAULT = 22;
    public static readonly NOP = 23;
    public static readonly PRAGMA = 24;
    public static readonly AnnotationKeyword = 25;
    public static readonly INPUT = 26;
    public static readonly OUTPUT = 27;
    public static readonly CONST = 28;
    public static readonly READONLY = 29;
    public static readonly MUTABLE = 30;
    public static readonly QREG = 31;
    public static readonly QUBIT = 32;
    public static readonly CREG = 33;
    public static readonly BOOL = 34;
    public static readonly BIT = 35;
    public static readonly INT = 36;
    public static readonly UINT = 37;
    public static readonly FLOAT = 38;
    public static readonly ANGLE = 39;
    public static readonly COMPLEX = 40;
    public static readonly ARRAY = 41;
    public static readonly VOID = 42;
    public static readonly DURATION = 43;
    public static readonly STRETCH = 44;
    public static readonly GPHASE = 45;
    public static readonly INV = 46;
    public static readonly POW = 47;
    public static readonly CTRL = 48;
    public static readonly NEGCTRL = 49;
    public static readonly DIM = 50;
    public static readonly DURATIONOF = 51;
    public static readonly DELAY = 52;
    public static readonly RESET = 53;
    public static readonly MEASURE = 54;
    public static readonly BARRIER = 55;
    public static readonly BooleanLiteral = 56;
    public static readonly LBRACKET = 57;
    public static readonly RBRACKET = 58;
    public static readonly LBRACE = 59;
    public static readonly RBRACE = 60;
    public static readonly LPAREN = 61;
    public static readonly RPAREN = 62;
    public static readonly COLON = 63;
    public static readonly SEMICOLON = 64;
    public static readonly DOT = 65;
    public static readonly COMMA = 66;
    public static readonly EQUALS = 67;
    public static readonly ARROW = 68;
    public static readonly PLUS = 69;
    public static readonly DOUBLE_PLUS = 70;
    public static readonly MINUS = 71;
    public static readonly ASTERISK = 72;
    public static readonly DOUBLE_ASTERISK = 73;
    public static readonly SLASH = 74;
    public static readonly PERCENT = 75;
    public static readonly PIPE = 76;
    public static readonly DOUBLE_PIPE = 77;
    public static readonly AMPERSAND = 78;
    public static readonly DOUBLE_AMPERSAND = 79;
    public static readonly CARET = 80;
    public static readonly AT = 81;
    public static readonly TILDE = 82;
    public static readonly EXCLAMATION_POINT = 83;
    public static readonly EqualityOperator = 84;
    public static readonly CompoundAssignmentOperator = 85;
    public static readonly ComparisonOperator = 86;
    public static readonly BitshiftOperator = 87;
    public static readonly IMAG = 88;
    public static readonly ImaginaryLiteral = 89;
    public static readonly BinaryIntegerLiteral = 90;
    public static readonly OctalIntegerLiteral = 91;
    public static readonly DecimalIntegerLiteral = 92;
    public static readonly HexIntegerLiteral = 93;
    public static readonly Identifier = 94;
    public static readonly HardwareQubit = 95;
    public static readonly FloatLiteral = 96;
    public static readonly TimingLiteral = 97;
    public static readonly BitstringLiteral = 98;
    public static readonly Whitespace = 99;
    public static readonly Newline = 100;
    public static readonly LineComment = 101;
    public static readonly BlockComment = 102;
    public static readonly VERSION_IDENTIFER_WHITESPACE = 103;
    public static readonly VersionSpecifier = 104;
    public static readonly ARBITRARY_STRING_WHITESPACE = 105;
    public static readonly StringLiteral = 106;
    public static readonly EAT_INITIAL_SPACE = 107;
    public static readonly EAT_LINE_END = 108;
    public static readonly RemainingLineContent = 109;
    public static readonly CAL_PRELUDE_WHITESPACE = 110;
    public static readonly CAL_PRELUDE_COMMENT = 111;
    public static readonly DEFCAL_PRELUDE_WHITESPACE = 112;
    public static readonly DEFCAL_PRELUDE_COMMENT = 113;
    public static readonly CalibrationBlock = 114;
    public static readonly RULE_program = 0;
    public static readonly RULE_version = 1;
    public static readonly RULE_statement = 2;
    public static readonly RULE_annotation = 3;
    public static readonly RULE_scope = 4;
    public static readonly RULE_pragma = 5;
    public static readonly RULE_statementOrScope = 6;
    public static readonly RULE_calibrationGrammarStatement = 7;
    public static readonly RULE_includeStatement = 8;
    public static readonly RULE_breakStatement = 9;
    public static readonly RULE_continueStatement = 10;
    public static readonly RULE_endStatement = 11;
    public static readonly RULE_forStatement = 12;
    public static readonly RULE_ifStatement = 13;
    public static readonly RULE_returnStatement = 14;
    public static readonly RULE_whileStatement = 15;
    public static readonly RULE_switchStatement = 16;
    public static readonly RULE_switchCaseItem = 17;
    public static readonly RULE_barrierStatement = 18;
    public static readonly RULE_boxStatement = 19;
    public static readonly RULE_delayStatement = 20;
    public static readonly RULE_nopStatement = 21;
    public static readonly RULE_gateCallStatement = 22;
    public static readonly RULE_measureArrowAssignmentStatement = 23;
    public static readonly RULE_resetStatement = 24;
    public static readonly RULE_aliasDeclarationStatement = 25;
    public static readonly RULE_classicalDeclarationStatement = 26;
    public static readonly RULE_constDeclarationStatement = 27;
    public static readonly RULE_ioDeclarationStatement = 28;
    public static readonly RULE_oldStyleDeclarationStatement = 29;
    public static readonly RULE_quantumDeclarationStatement = 30;
    public static readonly RULE_defStatement = 31;
    public static readonly RULE_externStatement = 32;
    public static readonly RULE_gateStatement = 33;
    public static readonly RULE_assignmentStatement = 34;
    public static readonly RULE_expressionStatement = 35;
    public static readonly RULE_calStatement = 36;
    public static readonly RULE_defcalStatement = 37;
    public static readonly RULE_expression = 38;
    public static readonly RULE_aliasExpression = 39;
    public static readonly RULE_declarationExpression = 40;
    public static readonly RULE_measureExpression = 41;
    public static readonly RULE_quantumCallExpression = 42;
    public static readonly RULE_rangeExpression = 43;
    public static readonly RULE_setExpression = 44;
    public static readonly RULE_arrayLiteral = 45;
    public static readonly RULE_indexOperator = 46;
    public static readonly RULE_indexedIdentifier = 47;
    public static readonly RULE_returnSignature = 48;
    public static readonly RULE_gateModifier = 49;
    public static readonly RULE_scalarType = 50;
    public static readonly RULE_qubitType = 51;
    public static readonly RULE_arrayType = 52;
    public static readonly RULE_arrayReferenceType = 53;
    public static readonly RULE_designator = 54;
    public static readonly RULE_defcalTarget = 55;
    public static readonly RULE_defcalArgumentDefinition = 56;
    public static readonly RULE_defcalOperand = 57;
    public static readonly RULE_gateOperand = 58;
    public static readonly RULE_externArgument = 59;
    public static readonly RULE_argumentDefinition = 60;
    public static readonly RULE_argumentDefinitionList = 61;
    public static readonly RULE_defcalArgumentDefinitionList = 62;
    public static readonly RULE_defcalOperandList = 63;
    public static readonly RULE_expressionList = 64;
    public static readonly RULE_identifierList = 65;
    public static readonly RULE_gateOperandList = 66;
    public static readonly RULE_externArgumentList = 67;

    public static readonly literalNames = [
        null,
        "'OPENQASM'",
        "'include'",
        "'defcalgrammar'",
        "'def'",
        "'cal'",
        "'defcal'",
        "'gate'",
        "'extern'",
        "'box'",
        "'let'",
        "'break'",
        "'continue'",
        "'if'",
        "'else'",
        "'end'",
        "'return'",
        "'for'",
        "'while'",
        "'in'",
        "'switch'",
        "'case'",
        "'default'",
        "'nop'",
        null,
        null,
        "'input'",
        "'output'",
        "'const'",
        "'readonly'",
        "'mutable'",
        "'qreg'",
        "'qubit'",
        "'creg'",
        "'bool'",
        "'bit'",
        "'int'",
        "'uint'",
        "'float'",
        "'angle'",
        "'complex'",
        "'array'",
        "'void'",
        "'duration'",
        "'stretch'",
        "'gphase'",
        "'inv'",
        "'pow'",
        "'ctrl'",
        "'negctrl'",
        "'#dim'",
        "'durationof'",
        "'delay'",
        "'reset'",
        "'measure'",
        "'barrier'",
        null,
        "'['",
        "']'",
        "'{'",
        "'}'",
        "'('",
        "')'",
        "':'",
        "';'",
        "'.'",
        "','",
        "'='",
        "'->'",
        "'+'",
        "'++'",
        "'-'",
        "'*'",
        "'**'",
        "'/'",
        "'%'",
        "'|'",
        "'||'",
        "'&'",
        "'&&'",
        "'^'",
        "'@'",
        "'~'",
        "'!'",
        null,
        null,
        null,
        null,
        "'im'",
    ];

    public static readonly symbolicNames = [
        null,
        'OPENQASM',
        'INCLUDE',
        'DEFCALGRAMMAR',
        'DEF',
        'CAL',
        'DEFCAL',
        'GATE',
        'EXTERN',
        'BOX',
        'LET',
        'BREAK',
        'CONTINUE',
        'IF',
        'ELSE',
        'END',
        'RETURN',
        'FOR',
        'WHILE',
        'IN',
        'SWITCH',
        'CASE',
        'DEFAULT',
        'NOP',
        'PRAGMA',
        'AnnotationKeyword',
        'INPUT',
        'OUTPUT',
        'CONST',
        'READONLY',
        'MUTABLE',
        'QREG',
        'QUBIT',
        'CREG',
        'BOOL',
        'BIT',
        'INT',
        'UINT',
        'FLOAT',
        'ANGLE',
        'COMPLEX',
        'ARRAY',
        'VOID',
        'DURATION',
        'STRETCH',
        'GPHASE',
        'INV',
        'POW',
        'CTRL',
        'NEGCTRL',
        'DIM',
        'DURATIONOF',
        'DELAY',
        'RESET',
        'MEASURE',
        'BARRIER',
        'BooleanLiteral',
        'LBRACKET',
        'RBRACKET',
        'LBRACE',
        'RBRACE',
        'LPAREN',
        'RPAREN',
        'COLON',
        'SEMICOLON',
        'DOT',
        'COMMA',
        'EQUALS',
        'ARROW',
        'PLUS',
        'DOUBLE_PLUS',
        'MINUS',
        'ASTERISK',
        'DOUBLE_ASTERISK',
        'SLASH',
        'PERCENT',
        'PIPE',
        'DOUBLE_PIPE',
        'AMPERSAND',
        'DOUBLE_AMPERSAND',
        'CARET',
        'AT',
        'TILDE',
        'EXCLAMATION_POINT',
        'EqualityOperator',
        'CompoundAssignmentOperator',
        'ComparisonOperator',
        'BitshiftOperator',
        'IMAG',
        'ImaginaryLiteral',
        'BinaryIntegerLiteral',
        'OctalIntegerLiteral',
        'DecimalIntegerLiteral',
        'HexIntegerLiteral',
        'Identifier',
        'HardwareQubit',
        'FloatLiteral',
        'TimingLiteral',
        'BitstringLiteral',
        'Whitespace',
        'Newline',
        'LineComment',
        'BlockComment',
        'VERSION_IDENTIFER_WHITESPACE',
        'VersionSpecifier',
        'ARBITRARY_STRING_WHITESPACE',
        'StringLiteral',
        'EAT_INITIAL_SPACE',
        'EAT_LINE_END',
        'RemainingLineContent',
        'CAL_PRELUDE_WHITESPACE',
        'CAL_PRELUDE_COMMENT',
        'DEFCAL_PRELUDE_WHITESPACE',
        'DEFCAL_PRELUDE_COMMENT',
        'CalibrationBlock',
    ];
    public static readonly ruleNames = [
        'program',
        'version',
        'statement',
        'annotation',
        'scope',
        'pragma',
        'statementOrScope',
        'calibrationGrammarStatement',
        'includeStatement',
        'breakStatement',
        'continueStatement',
        'endStatement',
        'forStatement',
        'ifStatement',
        'returnStatement',
        'whileStatement',
        'switchStatement',
        'switchCaseItem',
        'barrierStatement',
        'boxStatement',
        'delayStatement',
        'nopStatement',
        'gateCallStatement',
        'measureArrowAssignmentStatement',
        'resetStatement',
        'aliasDeclarationStatement',
        'classicalDeclarationStatement',
        'constDeclarationStatement',
        'ioDeclarationStatement',
        'oldStyleDeclarationStatement',
        'quantumDeclarationStatement',
        'defStatement',
        'externStatement',
        'gateStatement',
        'assignmentStatement',
        'expressionStatement',
        'calStatement',
        'defcalStatement',
        'expression',
        'aliasExpression',
        'declarationExpression',
        'measureExpression',
        'quantumCallExpression',
        'rangeExpression',
        'setExpression',
        'arrayLiteral',
        'indexOperator',
        'indexedIdentifier',
        'returnSignature',
        'gateModifier',
        'scalarType',
        'qubitType',
        'arrayType',
        'arrayReferenceType',
        'designator',
        'defcalTarget',
        'defcalArgumentDefinition',
        'defcalOperand',
        'gateOperand',
        'externArgument',
        'argumentDefinition',
        'argumentDefinitionList',
        'defcalArgumentDefinitionList',
        'defcalOperandList',
        'expressionList',
        'identifierList',
        'gateOperandList',
        'externArgumentList',
    ];

    public get grammarFileName(): string {
        return 'OpenQASM3Parser.g4';
    }
    public get literalNames(): (string | null)[] {
        return OpenQASM3Parser.literalNames;
    }
    public get symbolicNames(): (string | null)[] {
        return OpenQASM3Parser.symbolicNames;
    }
    public get ruleNames(): string[] {
        return OpenQASM3Parser.ruleNames;
    }
    public get serializedATN(): number[] {
        return OpenQASM3Parser._serializedATN;
    }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(
            this,
            OpenQASM3Parser._ATN,
            OpenQASM3Parser.decisionsToDFA,
            new antlr.PredictionContextCache(),
        );
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, OpenQASM3Parser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 137;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 1) {
                    {
                        this.state = 136;
                        this.version();
                    }
                }

                this.state = 142;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (
                    ((_la & ~0x1f) === 0 && ((1 << _la) & 2677522428) !== 0) ||
                    (((_la - 32) & ~0x1f) === 0 && ((1 << (_la - 32)) & 704379903) !== 0) ||
                    (((_la - 71) & ~0x1f) === 0 && ((1 << (_la - 71)) & 268179457) !== 0)
                ) {
                    {
                        {
                            this.state = 139;
                            this.statementOrScope();
                        }
                    }
                    this.state = 144;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 145;
                this.match(OpenQASM3Parser.EOF);
            }
        } catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localContext;
    }
    public version(): VersionContext {
        let localContext = new VersionContext(this.context, this.state);
        this.enterRule(localContext, 2, OpenQASM3Parser.RULE_version);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 147;
                this.match(OpenQASM3Parser.OPENQASM);
                this.state = 148;
                this.match(OpenQASM3Parser.VersionSpecifier);
                this.state = 149;
                this.match(OpenQASM3Parser.SEMICOLON);
            }
        } catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 4, OpenQASM3Parser.RULE_statement);
        let _la: number;
        try {
            this.state = 190;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
                case OpenQASM3Parser.PRAGMA:
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 151;
                        this.pragma();
                    }
                    break;
                case OpenQASM3Parser.INCLUDE:
                case OpenQASM3Parser.DEFCALGRAMMAR:
                case OpenQASM3Parser.DEF:
                case OpenQASM3Parser.CAL:
                case OpenQASM3Parser.DEFCAL:
                case OpenQASM3Parser.GATE:
                case OpenQASM3Parser.EXTERN:
                case OpenQASM3Parser.BOX:
                case OpenQASM3Parser.LET:
                case OpenQASM3Parser.BREAK:
                case OpenQASM3Parser.CONTINUE:
                case OpenQASM3Parser.IF:
                case OpenQASM3Parser.END:
                case OpenQASM3Parser.RETURN:
                case OpenQASM3Parser.FOR:
                case OpenQASM3Parser.WHILE:
                case OpenQASM3Parser.SWITCH:
                case OpenQASM3Parser.NOP:
                case OpenQASM3Parser.AnnotationKeyword:
                case OpenQASM3Parser.INPUT:
                case OpenQASM3Parser.OUTPUT:
                case OpenQASM3Parser.CONST:
                case OpenQASM3Parser.QREG:
                case OpenQASM3Parser.QUBIT:
                case OpenQASM3Parser.CREG:
                case OpenQASM3Parser.BOOL:
                case OpenQASM3Parser.BIT:
                case OpenQASM3Parser.INT:
                case OpenQASM3Parser.UINT:
                case OpenQASM3Parser.FLOAT:
                case OpenQASM3Parser.ANGLE:
                case OpenQASM3Parser.COMPLEX:
                case OpenQASM3Parser.ARRAY:
                case OpenQASM3Parser.DURATION:
                case OpenQASM3Parser.STRETCH:
                case OpenQASM3Parser.GPHASE:
                case OpenQASM3Parser.INV:
                case OpenQASM3Parser.POW:
                case OpenQASM3Parser.CTRL:
                case OpenQASM3Parser.NEGCTRL:
                case OpenQASM3Parser.DURATIONOF:
                case OpenQASM3Parser.DELAY:
                case OpenQASM3Parser.RESET:
                case OpenQASM3Parser.MEASURE:
                case OpenQASM3Parser.BARRIER:
                case OpenQASM3Parser.BooleanLiteral:
                case OpenQASM3Parser.LPAREN:
                case OpenQASM3Parser.MINUS:
                case OpenQASM3Parser.TILDE:
                case OpenQASM3Parser.EXCLAMATION_POINT:
                case OpenQASM3Parser.ImaginaryLiteral:
                case OpenQASM3Parser.BinaryIntegerLiteral:
                case OpenQASM3Parser.OctalIntegerLiteral:
                case OpenQASM3Parser.DecimalIntegerLiteral:
                case OpenQASM3Parser.HexIntegerLiteral:
                case OpenQASM3Parser.Identifier:
                case OpenQASM3Parser.HardwareQubit:
                case OpenQASM3Parser.FloatLiteral:
                case OpenQASM3Parser.TimingLiteral:
                case OpenQASM3Parser.BitstringLiteral:
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 155;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                        while (_la === 25) {
                            {
                                {
                                    this.state = 152;
                                    this.annotation();
                                }
                            }
                            this.state = 157;
                            this.errorHandler.sync(this);
                            _la = this.tokenStream.LA(1);
                        }
                        this.state = 188;
                        this.errorHandler.sync(this);
                        switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context)) {
                            case 1:
                                {
                                    this.state = 158;
                                    this.aliasDeclarationStatement();
                                }
                                break;
                            case 2:
                                {
                                    this.state = 159;
                                    this.assignmentStatement();
                                }
                                break;
                            case 3:
                                {
                                    this.state = 160;
                                    this.barrierStatement();
                                }
                                break;
                            case 4:
                                {
                                    this.state = 161;
                                    this.boxStatement();
                                }
                                break;
                            case 5:
                                {
                                    this.state = 162;
                                    this.breakStatement();
                                }
                                break;
                            case 6:
                                {
                                    this.state = 163;
                                    this.calStatement();
                                }
                                break;
                            case 7:
                                {
                                    this.state = 164;
                                    this.calibrationGrammarStatement();
                                }
                                break;
                            case 8:
                                {
                                    this.state = 165;
                                    this.classicalDeclarationStatement();
                                }
                                break;
                            case 9:
                                {
                                    this.state = 166;
                                    this.constDeclarationStatement();
                                }
                                break;
                            case 10:
                                {
                                    this.state = 167;
                                    this.continueStatement();
                                }
                                break;
                            case 11:
                                {
                                    this.state = 168;
                                    this.defStatement();
                                }
                                break;
                            case 12:
                                {
                                    this.state = 169;
                                    this.defcalStatement();
                                }
                                break;
                            case 13:
                                {
                                    this.state = 170;
                                    this.delayStatement();
                                }
                                break;
                            case 14:
                                {
                                    this.state = 171;
                                    this.endStatement();
                                }
                                break;
                            case 15:
                                {
                                    this.state = 172;
                                    this.expressionStatement();
                                }
                                break;
                            case 16:
                                {
                                    this.state = 173;
                                    this.externStatement();
                                }
                                break;
                            case 17:
                                {
                                    this.state = 174;
                                    this.forStatement();
                                }
                                break;
                            case 18:
                                {
                                    this.state = 175;
                                    this.gateCallStatement();
                                }
                                break;
                            case 19:
                                {
                                    this.state = 176;
                                    this.gateStatement();
                                }
                                break;
                            case 20:
                                {
                                    this.state = 177;
                                    this.ifStatement();
                                }
                                break;
                            case 21:
                                {
                                    this.state = 178;
                                    this.includeStatement();
                                }
                                break;
                            case 22:
                                {
                                    this.state = 179;
                                    this.ioDeclarationStatement();
                                }
                                break;
                            case 23:
                                {
                                    this.state = 180;
                                    this.measureArrowAssignmentStatement();
                                }
                                break;
                            case 24:
                                {
                                    this.state = 181;
                                    this.nopStatement();
                                }
                                break;
                            case 25:
                                {
                                    this.state = 182;
                                    this.oldStyleDeclarationStatement();
                                }
                                break;
                            case 26:
                                {
                                    this.state = 183;
                                    this.quantumDeclarationStatement();
                                }
                                break;
                            case 27:
                                {
                                    this.state = 184;
                                    this.resetStatement();
                                }
                                break;
                            case 28:
                                {
                                    this.state = 185;
                                    this.returnStatement();
                                }
                                break;
                            case 29:
                                {
                                    this.state = 186;
